# Trabalho-individual-GCES

./: Dockerfile  README.md  docker-compose.yaml
poetry/: pyproject.toml
src/: Dockerfile  dockerfile
src/parser/: YAML_parser.py
