[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["soaresdaniela <dannysoaresdeoliveira@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
